# PricesForZZapWithMail

./: .gitignore  main.py  pyproject.toml
config/: settings.py
src/: error_handler.py  processor.py  registry.py  utils.py
