[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "pricesforzzap"
version = "0.1.0"
description = "Processing price lists for ZZap marketplace"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
pricesforzzap = "main:main"
